--- a/client/public/App.css
+++ b/client/public/App.css
@@ -30,6 +30,14 @@ button {
   box-shadow: 0.2px 0.2px 2px 1px rgba(0, 0, 0, 0.3);
 }
 
+#error {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
 #wrapper {
   background-image: url('./OSZB620.jpg');
   background-size: cover;
