--- a/client/public/App.css
+++ b/client/public/App.css
@@ -39,7 +39,7 @@ button {
 }
 
 #wrapper {
-  background-image: url('./OSZB620.jpg');
+  background-image: url('./back_compressed.jpg');
   background-size: cover;
 }
 
